scripts/opensearch-k8s/01-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: opensearch
  namespace: opensearch
spec:
  serviceName: opensearch
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      containers:
        - name: opensearch
          image: opensearchproject/opensearch:2.12.0
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9600
              name: metrics
          resources:
            requests:
              cpu: '500m'
              memory: '1Gi'
            limits:
              cpu: '1'
              memory: '1Gi'
          volumeMounts:
            - name: data
              mountPath: /usr/share/opensearch/data
      volumes: []
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ['ReadWriteOnce']
        resources:
          requests:
            storage: 10Gi
