scripts/opensearch-k8s/06-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-dashboards
  namespace: opensearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch-dashboards
  template:
    metadata:
      labels:
        app: opensearch-dashboards
    spec:
      containers:
        - name: dashboards
          image: opensearchproject/opensearch-dashboards:2.12.0
          ports:
            - containerPort: 5601
              name: http
          resources:
            requests:
              cpu: '200m'
              memory: '512Mi'
            limits:
              cpu: '500m'
              memory: '512Mi'
