scripts/opensearch-k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch
  namespace: opensearch
spec:
  type: ClusterIP
  selector:
    app: opensearch
  ports:
    - name: opensearch-data
      port: 9200
      targetPort: 9200
